test/expected/explain_udl_2c_i.out
explain int operator"" _x(char, char)
                          ^
27: error: invalid parameter type for user-defined literal; must be one of: const (char|wchar_t|char8_t|char16_t|char32_t)*
